# backend_project

./: .gitignore  README.md  auth.py  database.py  frontend.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
routers/: auth_routes.py  task_routes.py
